--- a/Pertemuan 4/index.html
+++ b/Pertemuan 4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Pertemuan 4</title>
 </head>
 <body>
 <ol type="a" style="color: crimson;">
@@ -13,11 +13,14 @@
     <li>Belajar HTML</li>
 </ol>
 
-<ul style="color: darkorchid;">
-    <li>HTML</li>
-    <li>HTML</li>
-    <li>HTML</li>
-    <li>HTML</li>
+<ul type="circle" style="color: darkorchid;">
+    <li>List Jurusan di Universitas Metamedia
+        <ul><li>S1 Desain komunikasi Visual</li>
+            <li>S1 Sistem Informasi</li>
+            <li>S1 Manajemen Ritel</li>
+            <li>S1 Informatika</li>
+            <li>S1 Bisnis Digital</li></ul>
+    </li>
 </ul>
 </body>
 </html>
