--- a/Pertemuan 4/index.html
+++ b/Pertemuan 4/index.html
@@ -22,5 +22,26 @@
             <li>S1 Bisnis Digital</li></ul>
     </li>
 </ul>
+
+<ul type="circle" style="color: darkorchid;">
+    <li>A</li>
+    <li>B</li>
+        <ul><li>B1</li>
+            <li>B2</li>
+                <ul><li>B2a</li>
+                    <ul>
+                        <li>B2aa</li>
+                        <li>B2ab</li>
+                    </ul>
+                    <li>B2b</li>
+                    <li>B2c</li>
+                </ul>
+            <li>B3</li>
+                <ul><li>B31</li>
+                    <li>B32</li>
+            </ul>
+        </ul>
+    <li>C</li>
+</ul>
 </body>
 </html>
